--- a/web/assets/src/css/style.css
+++ b/web/assets/src/css/style.css
@@ -3,12 +3,35 @@ body{
 }
 
 div.boxes > div:nth-child(3){
-  background-color: #9c27b0;
+  background-color: #9f9f9f;
 }
 
 div.boxes > div{ 
+  /*
   box-shadow: 0 1px 2px rgba(0,0,0,0.07);
   padding: 5px; 
   border-radius: 1px;
   background-color: #fff;
+  */
+  cursor: pointer;
+  background: white;
+  box-shadow: -1px 1px 3px 1px lightgrey;
+  /*padding: 2%;*/
+  border-radius: 3px;
+  cursor: pointer;
+  -webkit-box-sizing: border-box;
+  -mox-box-sizing: border-box;
+  box-sizing: border-box;
+  
+}
+
+div.boxes > div .md-toolbar-tools + small{
+  padding: 0 16px;
+  margin-top: -25px;
+  font-size: 0.7em;
+  color: #E4E4E4;
+}
+
+div.boxes > div .md-toolbar-tools span{
+  text-shadow: 1px 1px 1px #000;
 }
