--- a/web/templates/index.html.twig
+++ b/web/templates/index.html.twig
@@ -7,41 +7,12 @@
   
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/angular-material/angular-material.min.css">
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/csshake/csshake.min.css">
+  <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/angular-loading-bar/build/loading-bar.min.css">
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/css/style.css">
 </head>
 <body>
   
-  <div ng-controller="codeMonDash">
-    
-    <md-toolbar>
-      <h2 class="md-toolbar-tools">
-        <div layout="row" layout-sm="column" layout-align="center center">
-          <span>CodeMonitor</span>
-          <md-progress-circular ng-show="sessions.length == 0 || loading == 1" class="md-warn md-hue-3" md-diameter="24" md-mode="indeterminate"></md-progress-circular>
-        </div>
-      </h2>
-    </md-toolbar>
-    
-    <div ng-show="sessions.length <= 0" layout="row" layout-margin layout-align="center center">
-      <div>
-        Loading Content
-      </div>
-    </div>
-    
-    <div class="boxes" layout="row" layout-margin layout-wrap>
-      <div class="fx-fade-right fx-trigger shake shake-little" ng-repeat="session in sessions track by $index"  flex="20">
-        <md-toolbar class="md-warn">
-          <div class="md-toolbar-tools">
-            <span class="md-flex">{[{session.name}]}</span>
-          </div>
-          <small am-time-ago="{[{session.updatedAt}]}"></small>
-        </md-toolbar>
-        <md-content class="md-padding" style="height: 100px;padding: 24px;">
-        </md-content>
-      </div>
-    </div>
-  
-  </div>
+  <div ng-view></div>
   
   
   <script src="{{app.request.basepath}}/assets/src/js/angular/angular.min.js"></script>
@@ -50,9 +21,11 @@
   <script src="{{app.request.basepath}}/assets/src/js/angular-material/angular-material.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/ngFx/dist/ngFxBundle.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/jquery/dist/jquery.min.js"></script>
+  <script src="{{app.request.basepath}}/assets/src/js/angular-route/angular-route.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/moment/min/moment.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/angular-moment/angular-moment.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/moment-timezone/builds/moment-timezone.min.js"></script>
+  <script src="{{app.request.basepath}}/assets/src/js/angular-loading-bar/build/loading-bar.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/app.js"></script>
 </body>
 </html>
