--- a/web/templates/index.html.twig
+++ b/web/templates/index.html.twig
@@ -8,12 +8,25 @@
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/angular-material/angular-material.min.css">
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/csshake/csshake.min.css">
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/angular-loading-bar/build/loading-bar.min.css">
+  <link class="codestyle" rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/highlightjs/styles/railscasts.css">
+  <link class="codestyle" rel="alternate stylesheet" href="{{app.request.basepath}}/assets/src/js/highlightjs/styles/monokai_sublime.css">
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/css/style.css">
 </head>
 <body>
   
-  <div ng-view></div>
+  <md-toolbar class="toolbar">
+    <md-button ng-if="hideBack == 0" class="back-button" ui-sref="{[{back || 'dashboard'}]}">&laquo; Back</md-button>
+    <h2 class="md-toolbar-tools" layout-align="center center">
+      <span class="toolbar-title" ng-class="{'shake shake-constant':dataLoading}">
+        CodeMonitor
+        <md-tooltip ng-if="dataLoading">
+          excited for new data coming in!
+        </md-tooltip>
+      </span>
+    </h2>
+  </md-toolbar>
   
+  <div ui-view></div>
   
   <script src="{{app.request.basepath}}/assets/src/js/angular/angular.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/angular-animate/angular-animate.min.js"></script>
@@ -26,6 +39,10 @@
   <script src="{{app.request.basepath}}/assets/src/js/angular-moment/angular-moment.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/moment-timezone/builds/moment-timezone.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/angular-loading-bar/build/loading-bar.min.js"></script>
+  <script src="{{app.request.basepath}}/assets/src/js/angular-ui-router/release/angular-ui-router.min.js"></script>
+  <script src="{{app.request.basepath}}/assets/src/js/highlightjs/highlight.pack.js"></script>
+  <script src="{{app.request.basepath}}/assets/src/js/angular-highlightjs/build/angular-highlightjs.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/app.js"></script>
+  <script src="{{app.request.basepath}}/assets/src/js/services.js"></script>
 </body>
 </html>
