added select file and diff

--- a/web/partials/dashboard.html
+++ b/web/partials/dashboard.html
@@ -2,7 +2,7 @@
   <div ng-click="selectItem($index, session)" class="fx-fade-right fx-trigger shake shake-little" ng-repeat="session in sessions track by $index"  flex="20">
     <md-toolbar class="md-warn">
       <div class="md-toolbar-tools">
-        <span class="md-flex">{[{session.name}]}</span>
+        <span class="md-flex">{[{session.name | limitTo:20}]}</span>
       </div>
       <div class="timeinfo" layout="column">
         <span>
