--- a/web/assets/src/css/style.css
+++ b/web/assets/src/css/style.css
@@ -2,6 +2,7 @@ body{
   background-color: #F2F2F2;
   min-height: 600px;
   height: auto;
+  padding-top: 0;
   padding-bottom: 5px;
 }
 
@@ -64,7 +65,7 @@ md-content.code{
 }
 
 .toolbar-title{
-  text-shadow: -1px 1px 3px 1px lightgrey;
+  text-shadow: -1px 1px 3px lightgrey;
 }
 
 .toolbar{
@@ -84,3 +85,32 @@ md-sidenav.filebar{
 }
 
 .changes .selected{ font-weight: bold; }
+
+.session-sidenav md-select[aria-expanded=false] span{
+  color: #fff;
+  
+}
+
+
+.match, .textdiff span {
+	color: gray;
+}
+
+.ins, ins {
+	color: black;
+	background: #bbffbb;
+}
+
+.del, del {
+	color: black;
+	background: #ffbbbb;
+}
+
+.noselect {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
