--- a/web/partials/session.html
+++ b/web/partials/session.html
@@ -1,31 +1,25 @@
-<md-sidenav class="md-sidenav-right md-whiteframe-z2" md-component-id="right">
-  <md-toolbar class="md-theme-light">
-    <h1 class="md-toolbar-tools">Sidenav Right</h1>
-  </md-toolbar>
-  <md-content ng-controller="RightNavCtrl" class="md-padding">
-    <md-button ng-click="close()" class="md-primary">
-      Close Sidenav Right
-    </md-button>
-  </md-content>
-</md-sidenav>
 <section layout="row" flex>
   <md-content class="code" flex>
-    <div ng-if="content" hljs source="content"></div>
+    <div ng-if="!diff" hljs source="content" no-escape></div>
+    <pre class="hljs" ng-if="diff" class="textdiff" semantic-diff left-obj="content" right-obj="diff"></pre>
   </md-content>
-  <md-sidenav ng-if="filename" class="md-sidenav-right md-whiteframe-z2" md-component-id="right"
+  <md-sidenav ng-if="filename" class="session-sidenav md-sidenav-right md-whiteframe-z2" md-component-id="right"
               md-component-id="right" md-is-locked-open="$mdMedia('gt-md')">
     <md-toolbar class="md-theme-indigo">
-      <h1 class="md-toolbar-tools">{[{filename || ''}]}</h1>
+      <div layout="column" layout-align="center center" style="height: 100px;">
+        <md-select ng-change="changeFile(selectedFile)" ng-model="selectedFile" placeholder="{[{filename}]}">
+          <md-option ng-value="$index" ng-repeat="file in files track by $index">{[{file.name}]}</md-option>
+        </md-select>
+      </div>
     </md-toolbar>
     <md-content class="changes md-padding" ng-controller="LeftNavCtrl">
       <md-list>
-        <md-item ng-class="{selected:(currentChanges === $index)}" ng-repeat="item in changes">
+        <md-item ng-class="{selected:(currentChanges === $index)}" ng-repeat="item in changesInCurrentFile">
           <md-item-content>
             <div class="md-tile-content">
               <a href="" ng-click="selectChange($index)">
                 #{[{$index}]}: 
                 <span am-time-ago="{[{momentjs(item.updatedAt.date+item.updatedAt.timezone)}]}"></span>
-                ({[{item.file}]})
               </a>
             </div>
           </md-item-content>
