--- a/web/templates/index.html.twig
+++ b/web/templates/index.html.twig
@@ -42,6 +42,9 @@
   <script src="{{app.request.basepath}}/assets/src/js/angular-ui-router/release/angular-ui-router.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/highlightjs/highlight.pack.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/angular-highlightjs/build/angular-highlightjs.min.js"></script>
+  <script src="{{app.request.basepath}}/assets/src/js/jsdiff/diff.js"></script>
+  <script src="{{app.request.basepath}}/assets/src/js/google-diff-match-patch/diff_match_patch.js"></script>
+  <script src="{{app.request.basepath}}/assets/src/js/angular-diff-match-patch/angular-diff-match-patch.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/app.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/services.js"></script>
 </body>
