--- a/web/templates/index.html.twig
+++ b/web/templates/index.html.twig
@@ -45,6 +45,8 @@
   <script src="{{app.request.basepath}}/assets/src/js/jsdiff/diff.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/google-diff-match-patch/diff_match_patch.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/angular-diff-match-patch/angular-diff-match-patch.js"></script>
+  <script src="http://{{app.request.server.get('SERVER_NAME')}}:3000/socket.io/socket.io.js"></script>
+  <script src="{{app.request.basepath}}/assets/src/js/angular-socket-io/socket.min.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/app.js"></script>
   <script src="{{app.request.basepath}}/assets/src/js/services.js"></script>
 </body>
