--- a/web/assets/src/css/style.css
+++ b/web/assets/src/css/style.css
@@ -6,17 +6,57 @@ body{
   padding-bottom: 5px;
 }
 
-div.boxes > div:nth-child(3){
-  background-color: #9f9f9f;
+.download md-list-item{
+  display: block;
 }
 
-div.boxes > div{ 
+.download .icon{
+  width: 40px;
+  height: 40px;
+  margin-right: 5px;
+  font-size: 35px;
+  vertical-align: middle
+}
+
+.download .icon.how-to{
+  font-size: 20px;
+  width: 25px;
+  height: 20px;
+}
+
+.download{
+  padding: 25px 10px 10px 25px;
+}
+
+.download .md-button{
+  padding: 10px;
+}
+
+.download > img{
+  float: left; margin-right: 10px;
+  width: 64px;
+  display:none;
+}
+.download h1{ 
+  font-family: "Open Sans","lucida grande","Segoe UI",arial,verdana,"lucida sans unicode",tahoma,sans-serif;
+  font-size: 26px; 
+  margin-top: 0; 
+  margin-bottom: 5px;
+}
+
+
+.box-container{
+  padding: 10px;
+}
+
+div.boxes .box{ 
   /*
   box-shadow: 0 1px 2px rgba(0,0,0,0.07);
   padding: 5px; 
   border-radius: 1px;
   background-color: #fff;
   */
+  width: 100%;
   cursor: pointer;
   background: white;
   box-shadow: -1px 1px 3px 1px lightgrey;
@@ -29,14 +69,14 @@ div.boxes > div{
   
 }
 
-div.boxes > div .md-toolbar-tools + .timeinfo{
+div.boxes .box .md-toolbar-tools + .timeinfo{
   padding: 0 16px 5px;
   margin-top: -20px;
   font-size: 0.6em;
   color: #E4E4E4;
 }
 
-div.boxes > div .md-toolbar-tools span{
+div.boxes .box .md-toolbar-tools span{
   text-shadow: 1px 1px 1px #000;
 }
 .timeinfo span{
