--- a/web/templates/index.html.twig
+++ b/web/templates/index.html.twig
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/angular-material/angular-material.min.css">
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/csshake/csshake.min.css">
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/angular-loading-bar/build/loading-bar.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link class="codestyle" rel="stylesheet" href="{{app.request.basepath}}/assets/src/js/highlightjs/styles/railscasts.css">
   <link class="codestyle" rel="alternate stylesheet" href="{{app.request.basepath}}/assets/src/js/highlightjs/styles/monokai_sublime.css">
   <link rel="stylesheet" href="{{app.request.basepath}}/assets/src/css/style.css">
